k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chaseapp
  labels:
    app.kubernetes.io/name: chaseapp
    app.kubernetes.io/part-of: chaseapp
